--- a/index.html
+++ b/index.html
@@ -233,17 +233,16 @@
 
        <!-- section-7 -->
         <div class="flex justify-center items-center mt-8 bg-[#FD6711] text-white h-[40vh]">
-         <div>
-         <div class="flex gap-4 text-5xl pb-2 font-bold">
-            <h1 id="day">27</h1>
-            <h1 id="month">03</h1>
-            <h1 id="year">2027</h1>
+         <div class="bg-[#f0f0f0] px-14 py-2 text-[#FD6711] rounded-lg">
+         <div class="flex font-bold text-5xl gap-16">
+            <h1 id="hour">15</h1>
+            <h1 id="minutes">13</h1>
+            <h1 id="seconds">51</h1>
          </div>
-         <div class="flex gap-4 text-4xl font-bold">
-            <h1 id="hour">10</h1>
-            <h1 id="minutes">20</h1>
-            <h1 id="seconds">30</h1>
-            <h1 id="AmPm">Am</h1>
+         <div class="flex gap-[85px] text-[15px] ">
+            <p>HOURS</p>
+            <p>MINS</p>
+            <p>SEC</p>
          </div>
          </div>
         </div>
