--- a/index.html
+++ b/index.html
@@ -299,6 +299,48 @@
              <h3>At DDS, we provide a comprehensive range of services, including professional portrait photography, engaging podcast productions, strategic digital <br> marketing, branding, event management, and high-quality photo and video production. We are your one-stop solution for all media needs.</h3>
              </div>
              </div>
+
+             <!-- section-9 -->
+              <!-- footer -->
+               <div class="bg-black w-full sm:h-[70vh] h-[165vh] text-white">
+                  <div class="sm:flex sm:justify-between sm:px-10 sm:py-2 sm:pt-[5%] ">
+                     <div class="sm:pt-0 pt-10 pb-10 pl-6">
+                        <h1 class="font-bold text-3xl pb-5">Alpha</h1>
+                        <p class="pb-5 text-[#A3A2A2] text-xl">Welcome to our Aelpa nonprofit <br>Lore ipsum simply text amet cing <br> elit ext amet cing ipsum</p>
+                        <button class="bg-teal-500 px-10 py-3 rounded-lg mt-5">Donation</button>
+                     </div>
+                     <div class="sm:pt-0 pt-10 pb-10 pl-6">
+                        <h1 class="font-bold text-3xl pb-5">NEWSLETTER</h1>
+                        <p class="pb-5 text-[#A3A2A2] text-xl">Subscribe our newsletter to get <br> the latest news & updates.</p>
+                        <input class="outline-none px-6 text-black font-bold py-4 rounded-lg" type="text" placeholder="Find Course "> <br> <br>
+                        <input type="checkbox"> i agree to the Privacy Policy
+                     </div>
+                     <div class="sm:pt-0 pt-10 pb-10 pl-6">
+                        <h1 class="font-bold text-3xl pb-5">USEFUL LINKS</h1>
+                        <p class="text-[#a3a2a2] pb-3">Home</p>
+                        <p class="text-[#a3a2a2] pb-3">Donation</p>
+                        <p class="text-[#a3a2a2] pb-3">About Us</p>
+                        <p class="text-[#a3a2a2] pb-3">Shop</p>
+                        <p class="text-[#a3a2a2] ">Contacts</p>
+                     </div>
+                     <div class="sm:pt-0 pt-10 pb-10 pl-6" >
+                        <h1>ADDRESS</h1>
+                        <div class="flex gap-4 pt-8 pb-5  text-[#a3a2a2] ">
+                           <i class="fa-solid fa-location-dot text-2xl"></i>
+                           <p class="-mt-1">90 10h Street, Office 478 <br> Road 5 Berlin, CA 700156</p>
+                        </div>
+                        <div class="flex gap-4 pb-5  text-[#a3a2a2] ">
+                           <i class="fa-solid fa-envelope-circle-check text-2xl"></i>
+                           <p class="text-xl">infogamil@gmail.com</p>
+                        </div>
+                        <div class="flex gap-4  text-[#a3a2a2] ">
+                           <i class="fa-solid fa-phone text-2xl"></i>
+                           <p class="text-xl" >+252619832870</p>
+                        </div>
+                     </div>
+                  </div>
+
+               </div>
              
              
 
